LOGO changes done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elite Interior Design | Transform Your Space</title>
+    <title>Miirus | Transform Your Space</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <h2>Elite Design</h2>
+                    <h2>Miirus</h2>
                 </div>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="#home" class="nav-link">Home</a></li>
@@ -207,7 +207,7 @@
                         <div class="info-icon">📧</div>
                         <div>
                             <h4>Email</h4>
-                            <p>info@elitedesign.com</p>
+                            <p>info@miirus.com</p>
                         </div>
                     </div>
                     <div class="info-item">
@@ -264,7 +264,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Elite Design</h3>
+                    <h3>Miirus</h3>
                     <p>Transforming spaces into works of art since 2009.</p>
                 </div>
                 <div class="footer-section">
@@ -287,7 +287,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Elite Design. All rights reserved.</p>
+                <p>&copy; 2024 Miirus. All rights reserved.</p>
             </div>
         </div>
     </footer>
