--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="about-content">
                 <div class="about-text">
-                    <p class="lead">With over 15 years of experience in interior design, we specialize in creating stunning residential and commercial spaces that reflect your unique style and personality.</p>
+                    <p class="lead">With over ample experience in interior design, we specialize in creating stunning residential and commercial spaces that reflect your unique style and personality.</p>
                     <p>Our team of talented designers combines creativity with functionality to transform houses, corporate offices, and commercial spaces into inspiring environments. We believe that great design should not only look beautiful but also enhance the way you live and work.</p>
                     <div class="stats">
                         <div class="stat-item">
@@ -203,31 +203,10 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <h3>Contact Information</h3>
-                    <div class="info-item">
-                        <div class="info-icon">📧</div>
-                        <div>
-                            <h4>Email</h4>
-                            <p>info@miirus.com</p>
-                        </div>
-                    </div>
-                    <div class="info-item">
-                        <div class="info-icon">📞</div>
-                        <div>
-                            <h4>Phone</h4>
-                            <p>+1 (555) 123-4567</p>
-                        </div>
-                    </div>
-                    <div class="info-item">
-                        <div class="info-icon">📍</div>
-                        <div>
-                            <h4>Address</h4>
-                            <p>123 Design Street, Creative City, CC 12345</p>
-                        </div>
-                    </div>
                     <div class="social-links">
                         <a href="#" class="social-link">Instagram</a>
-                        <a href="#" class="social-link">Facebook</a>
-                        <a href="#" class="social-link">Pinterest</a>
+                        <!-- <a href="#" class="social-link">Facebook</a>
+                        <a href="#" class="social-link">Pinterest</a> -->
                     </div>
                 </div>
                 <form class="contact-form" id="contactForm">
@@ -265,7 +244,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Miirus</h3>
-                    <p>Transforming spaces into works of art since 2009.</p>
+                    <p>Transforming spaces into works of art since 2025.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
@@ -287,7 +266,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Miirus. All rights reserved.</p>
+                <p>&copy; 2025 Miirus. All rights reserved.</p>
             </div>
         </div>
     </footer>
