FIX:changes done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miirus | Transform Your Space</title>
+    <title>Elite Interior Design | Transform Your Space</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <h2>Miirus</h2>
+                    <h2>Elite Design</h2>
                 </div>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="#home" class="nav-link">Home</a></li>
@@ -52,7 +52,7 @@
             </div>
             <div class="about-content">
                 <div class="about-text">
-                    <p class="lead">With over ample experience in interior design, we specialize in creating stunning residential and commercial spaces that reflect your unique style and personality.</p>
+                    <p class="lead">With over 15 years of experience in interior design, we specialize in creating stunning residential and commercial spaces that reflect your unique style and personality.</p>
                     <p>Our team of talented designers combines creativity with functionality to transform houses, corporate offices, and commercial spaces into inspiring environments. We believe that great design should not only look beautiful but also enhance the way you live and work.</p>
                     <div class="stats">
                         <div class="stat-item">
@@ -203,10 +203,31 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <h3>Contact Information</h3>
+                    <div class="info-item">
+                        <div class="info-icon">📧</div>
+                        <div>
+                            <h4>Email</h4>
+                            <p>info@elitedesign.com</p>
+                        </div>
+                    </div>
+                    <div class="info-item">
+                        <div class="info-icon">📞</div>
+                        <div>
+                            <h4>Phone</h4>
+                            <p>+1 (555) 123-4567</p>
+                        </div>
+                    </div>
+                    <div class="info-item">
+                        <div class="info-icon">📍</div>
+                        <div>
+                            <h4>Address</h4>
+                            <p>123 Design Street, Creative City, CC 12345</p>
+                        </div>
+                    </div>
                     <div class="social-links">
                         <a href="#" class="social-link">Instagram</a>
-                        <!-- <a href="#" class="social-link">Facebook</a>
-                        <a href="#" class="social-link">Pinterest</a> -->
+                        <a href="#" class="social-link">Facebook</a>
+                        <a href="#" class="social-link">Pinterest</a>
                     </div>
                 </div>
                 <form class="contact-form" id="contactForm">
@@ -243,8 +264,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Miirus</h3>
-                    <p>Transforming spaces into works of art since 2025.</p>
+                    <h3>Elite Design</h3>
+                    <p>Transforming spaces into works of art since 2009.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
@@ -266,7 +287,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Miirus. All rights reserved.</p>
+                <p>&copy; 2024 Elite Design. All rights reserved.</p>
             </div>
         </div>
     </footer>
